name:                wai-middleware-preprocessor
version:             0.1.0.0
synopsis:            WAI middleware that preprocesses and caches files (e.g.: for Fay, purescript, etc.)
homepage:            https://github.com/taktoa/wai-middleware-preprocessor
bug-reports:         https://github.com/taktoa/wai-middleware-preprocessor/issues
license:             GPL-3
license-file:        LICENSE
author:              Remy Goldschmidt <taktoa@gmail.com>
maintainer:          Remy Goldschmidt <taktoa@gmail.com>
category:            Web
stability:           experimental
build-type:          Simple
cabal-version:       >= 1.10
description:         WAI middleware that preprocesses and caches files (e.g.: for Fay, purescript, etc.)

library
  exposed-modules:     Network.Wai.Middleware.Preprocessor
  default-extensions:  Safe
  default-language:    Haskell2010
  build-depends:       base             >= 4.6.0.1  && < 5
                     , bytestring       >= 0.10.0.2 && < 0.11
                     , containers       >= 0.5.0.0  && < 0.6
                     , directory        >= 1.2.0.1  && < 1.3
                     , filepath         >= 1.3.0.1  && < 1.4
                     , http-types       >= 0.8.2    && < 0.9
                     , mtl              >= 2.1.2    && < 2.3
                     , text             >= 0.11.3.1 && < 1.3
                     , wai              >= 3.0.0    && < 3.1
  ghc-options: -Wall

source-repository head
  type:     git
  location: git://github.com/taktoa/wai-middleware-preprocessor.git
